--- a/SwiftUIDebug/Classes/LogTableViewCell.xib
+++ b/SwiftUIDebug/Classes/LogTableViewCell.xib
@@ -11,7 +11,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="78" id="ZsE-O1-3PH" customClass="LogTableViewCell" customModule="SwiftUIDebug">
+        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" restorationIdentifier="LogTableViewCell" selectionStyle="default" indentationWidth="10" reuseIdentifier="LogTableViewCell" rowHeight="78" id="ZsE-O1-3PH" customClass="LogTableViewCell" customModule="SwiftUIDebug">
             <rect key="frame" x="0.0" y="0.0" width="375" height="78"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="ZsE-O1-3PH" id="fYQ-TL-5Jv">
