--- a/SwiftUIDebug/Classes/LogTableViewCell.xib
+++ b/SwiftUIDebug/Classes/LogTableViewCell.xib
@@ -11,24 +11,24 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" restorationIdentifier="LogTableViewCell" selectionStyle="default" indentationWidth="10" reuseIdentifier="LogTableViewCell" rowHeight="78" id="ZsE-O1-3PH" customClass="LogTableViewCell" customModule="SwiftUIDebug">
+        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" restorationIdentifier="LogTableViewCell" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="LogTableViewCell" rowHeight="78" id="ZsE-O1-3PH" customClass="LogTableViewCell" customModule="SwiftUIDebug">
             <rect key="frame" x="0.0" y="0.0" width="375" height="78"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="ZsE-O1-3PH" id="fYQ-TL-5Jv">
-                <rect key="frame" x="0.0" y="0.0" width="375" height="77.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="342" height="77.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="R4a-cw-WM1">
-                        <rect key="frame" x="16" y="8" width="343" height="29.5"/>
+                        <rect key="frame" x="16" y="8" width="310" height="29.5"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="2017-07-21" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="caE-Zy-fHA">
-                                <rect key="frame" x="0.0" y="0.0" width="343" height="13.5"/>
+                                <rect key="frame" x="0.0" y="0.0" width="310" height="13.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="11"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="100" text="A log entry" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Z4b-Uy-oOQ">
-                                <rect key="frame" x="0.0" y="13.5" width="343" height="16"/>
+                                <rect key="frame" x="0.0" y="13.5" width="310" height="16"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
